overflow prevent holder

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1800,4 +1800,5 @@ header {
 
 .main-holder{
     overflow-x: hidden!important;
+    overflow-y: hidden!important;
 }
